# ozone

./: .directory  .gitignore  .hgignore  .hgrc  i18n  manage.py  ozoned  ozoned.py  pyproject.toml  requirements.txt
.atom/: config.cson
active_directory/: admin.py  auth.py  models.py
core/: __init__.py  admin.py  context_processors.py  forms.py  html5_widgets.py  jinja_lib.py  json_views.py  latex.py  menu.py  middlewares.py  models.py  pdf_views.py  signals.py  urls.py  utils.py  views.py
core/fixtures/: initial_data.json
core/latex/: awhl.tex  awhl_leer.tex
core/migrations/: 0001_initial.py  0002_auto_20170915_0910.py  0002_auto__add_accidententry__add_place__add_configuration.py  0003_auto_20200107_1403.py  0003_auto__chg_field_accidententry_added_by.py  0004_auto_20200108_1328.py  0005_course.py  0006_auto_20200203_1050.py  0007_auto_20200203_1156.py  0008_auto_20220115_1050.py
core/templates/: birthdays.html  error.html  iadmin.html  index.html  internal_help_dlg.html  jinja_index.html  jinja_menu.html  login.html  menu.html  phonelist.html  profile.html
core/templatetags/: help.py  ozone_tags.py  urls.py
core/utils/: __init__.py  charts.py  cm_proxy.py  (+1 more)
docs/: Makefile  allgemeines.rst  changelog.rst  changelog.rst.tpl  conf.py  hglog.py  includes.txt  index.rst  make.bat
ext/: texescape.py
feedback/: admin.py  models.py  utils.py
orders/: admin.py  feeds.py  forms.py  menu.py  models.py  pdf_views.py  urls.py  views.py
ozone/: initial_data.json  modelviz.py  ozone-dev.sqlite3  settings.py  setup_new_db.txt  urls.py  wsgi.py
(+205 files in other folders)
