[tool.poetry]
name = "Ozone"
version = "3.1.0"
description = "Azubiverwaltung"
authors = ["Whitie <weimann.th@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=2.7.0 <3.0.0"
django = "1.7.7"
django-audit-log = "0.4.0"
django-bootstrap-admin = "0.3.0"
cryptography = "2.0.3"
docutils = "0.12"
ipaddress = "1.0.7"
Jinja2 = "2.7.3"
lxml = "3.3.5"
openpyxl = "2.0.4"
Pillow = "2.5.1"
psycopg2 = "2.8.4"
python-ldap = "2.4.12"
reportlab = "3.1.8"
requests = "2.22.0"
South = "0.8.2"
Cython = "0.19.1"
enum34 = "1.1.6"
flup = "^1.0.3"
pytz = "^2021.1"
pyasn1 = "0.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
